<resources>
    <string name="app_name">Project 2</string>
    <string name="brief_main">Enter the address of the Genome Server below.</string>
    <string name="input_address">Server address</string>
    <string name="input_port">Server port</string>
    <string name="button_connect">Connect</string>
    <string name="button_reconnect">Reconnect</string>
    <string name="input_genome">Enter genome</string>
    <string name="input_sequence">Enter comparison sequence</string>
    <string name="brief_session">Select an operation, input the genome, and subsequence.</string>
    <string name="button_go">Go</string>
    <string name="output_genome">Output will go here.</string>
    <string name="msg_connected">Connected to server.</string>
    <string-array name="select_options">
        <item>Count occurrences</item>
        <item>Align sequence</item>
    </string-array>
</resources>